# scripts

./: LICENSE  environment_detection.sh  install_ansible.sh  models.sh  personal_workstation_setup.sh  run_ansible.sh
ansible/: docker_setup.yml  requirements.yml  setup.yml
students/: README.md  every_start.sh  first_start.sh  long_one_time_setup.sh  models.sh  pyproject.toml  single_line.sh  start_notebook_env.sh
