[project]
name = "prompt-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "httpx>=0.24.0",
    "langchain>=0.1.0",
    "langchain-ollama>=0.1.0",
    "ollama>=0.1.0",
    "polars>=0.20.0",
]
